// =====================================================
// CommercialNews — Authorization Module (V1) — dbdiagram.io
// File: explanation/architecture/arc42/diagrams/erd/authorization-v1.dbml
//
// Purpose
// - RBAC foundation: roles, permissions, assignments.
// - Truth-first, sync-base authorization model.
// - Idempotent assignment/grant via composite PKs.
//
// Notes
// - Audit of grant/revoke is handled by Audit module (no local audit tables).
// - Cross-module refs to Identity are contract-level (FK optional if shared DB).
// - Role/Permission uniqueness is enforced by normalized canonical keys.
// - UserRole / RolePermission remain simple sync-base truth relationships in V1.
// =====================================================

Table Role {
  RoleId bigint [pk, increment]

  Name nvarchar(80) [not null]
  NameNormalized nvarchar(80) [not null]   // canonical uniqueness/lookup key
  DisplayName nvarchar(120) [null]
  Description nvarchar(300) [null]

  IsSystem bit [not null, default: 0]
  IsActive bit [not null, default: 1]

  CreatedAt datetime2(3) [not null, default: `SYSUTCDATETIME()`]
  UpdatedAt datetime2(3) [not null, default: `SYSUTCDATETIME()`]

  CreatedByUserId bigint [null]            // actor user (Identity)
  UpdatedByUserId bigint [null]            // actor user (Identity)

  Indexes {
    (NameNormalized) [unique, name: "UQ_Role_NameNormalized"]
    (IsActive, NameNormalized) [name: "IX_Role_IsActive_NameNormalized"]
  }

  Note: "System roles may be protected by policy. NameNormalized is the canonical comparison key."
}

Table Permission {
  PermissionId bigint [pk, increment]

  Key nvarchar(120) [not null]             // stable identifier: content:publish
  KeyNormalized nvarchar(120) [not null]   // canonical uniqueness/lookup key
  Module nvarchar(50) [null]               // optional grouping
  Action nvarchar(50) [null]
  Description nvarchar(300) [null]

  IsSystem bit [not null, default: 0]
  IsActive bit [not null, default: 1]

  CreatedAt datetime2(3) [not null, default: `SYSUTCDATETIME()`]
  UpdatedAt datetime2(3) [not null, default: `SYSUTCDATETIME()`]

  CreatedByUserId bigint [null]            // actor user (Identity)
  UpdatedByUserId bigint [null]            // actor user (Identity)

  Indexes {
    (KeyNormalized) [unique, name: "UQ_Permission_KeyNormalized"]
    (IsActive, Module, Action) [name: "IX_Permission_IsActive_Module_Action"]
  }

  Note: "Permission keys are stable identifiers. Prefer add-only evolution. KeyNormalized is the canonical comparison key."
}

Table UserRole {
  UserId bigint [not null]                 // cross-module ref -> Identity.UserAccount
  RoleId bigint [not null]

  AssignedAt datetime2(3) [not null, default: `SYSUTCDATETIME()`]
  AssignedByUserId bigint [null]           // actor user (Identity)

  Indexes {
    (UserId, RoleId) [pk]                  // idempotent assignment by design
    (RoleId, UserId) [name: "IX_UserRole_RoleId_UserId"]
  }

  Note: "Composite PK ensures idempotent role assignment in V1 sync-base truth model."
}

Table RolePermission {
  RoleId bigint [not null]
  PermissionId bigint [not null]

  GrantedAt datetime2(3) [not null, default: `SYSUTCDATETIME()`]
  GrantedByUserId bigint [null]            // actor user (Identity)

  Indexes {
    (RoleId, PermissionId) [pk]            // idempotent grant by design
    (PermissionId, RoleId) [name: "IX_RolePermission_PermissionId_RoleId"]
  }

  Note: "Composite PK ensures idempotent role-permission grants in V1 sync-base truth model."
}

// ---------- External stub (optional, for ERD readability) ----------
Table IdentityUserAccount {
  UserId bigint [pk]
  Note: "EXTERNAL (Identity module). Stub for ERD readability only."
}

// ---------- Relationships ----------
Ref: UserRole.RoleId > Role.RoleId
Ref: RolePermission.RoleId > Role.RoleId
Ref: RolePermission.PermissionId > Permission.PermissionId

// cross-module refs (visual only)
Ref: Role.CreatedByUserId > IdentityUserAccount.UserId
Ref: Role.UpdatedByUserId > IdentityUserAccount.UserId

Ref: Permission.CreatedByUserId > IdentityUserAccount.UserId
Ref: Permission.UpdatedByUserId > IdentityUserAccount.UserId

Ref: UserRole.UserId > IdentityUserAccount.UserId
Ref: UserRole.AssignedByUserId > IdentityUserAccount.UserId

Ref: RolePermission.GrantedByUserId > IdentityUserAccount.UserId